# digital-oracle-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mcp_server.py  pyproject.toml  smithery.yaml
src/digital_oracle_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
