[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-oracle-mcp"
version = "1.0.0"
description = "Digital Oracle MCP Server - Answer prediction questions using market trading data"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "komako-workshop", email = "1255897343@qq.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/komako-workshop/digital-oracle"
Repository = "https://github.com/komako-workshop/digital-oracle"

[project.scripts]
digital-oracle-mcp = "mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["digital_oracle*"]
