[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-oracle-mcp"
version = "1.0.2"
description = "Digital Oracle MCP Server - 14 financial market data tools via Polymarket, Kalshi, Treasury, CFTC, and more"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "komako-workshop"}]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/mzxsuperman/digital-oracle-mcp"
Repository = "https://github.com/mzxsuperman/digital-oracle-mcp"

[project.scripts]
digital-oracle-mcp = "mcp_server:main"
digital-oracle-mcp-cloud = "mcp_server:main_cloud"

[tool.setuptools.packages.find]
where = ["src"]
include = ["digital_oracle*"]
